[package]
name = "tokio-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.75", features = ["backtrace"]}
rayon = "1.8.0"
rstest = "0.18.2"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros", "fs", "signal", "time", "sync"] }
